created contact form clientside

--- a/app/F2-siteinfo.component.html
+++ b/app/F2-siteinfo.component.html
@@ -1,37 +1,7 @@
  <section id= "site-info" class="container">
             <div class="space-box">
                 <h2>Contact Us For A Quote</h2>
-                 <form id="ajax-contact" class="space-box" method="post" action="mailer.php">
-                    <div>
-                        <div class="field">
-                            <label for="First Name">First Name:</label>
-                           <!-- <input type="text" id="first-name" name="first-name" required> -->
-                        </div>
-                        <div class="field">
-                            <label for="Last Name">Last Name:</label>
-                           <!-- <input type="text" id="last-name" name="last-name" required>  -->
-                        </div>
-
-                        <div class="field">
-                            <label for="email">Email:</label>
-                           <!-- <input type="email" id="email" name="email" required> -->
-                        </div>
-
-                        <div class="field">
-                            <label for="">Phone Number:</label>
-                           <!-- <input id="number" name="number" required></input> -->
-                        </div>
-                        
-                        <div class="field">
-                            <label for="Property Address">Property Address:</label>
-                            <!-- <input type="text" id="property-address" name="property-address" required> -->
-                        </div>
-
-                        <div class="field">
-                            <button class="button" type="submit">Send</button>
-                        </div>
-                    </div>
-              </form>
+                 <contact-form></contact-form>
                 <footer></footer>
             </div>
                     
