--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,14 @@ html{
 button:focus{
     outline:none; }
     
+.ng-valid[required] {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid {
+  border-left: 5px solid #a94442; /* red */
+}
+    
 a {
     color:#000000; }
 
