--- a/app/F2-branding.component.css
+++ b/app/F2-branding.component.css
@@ -37,3 +37,12 @@
     font-size: 1.5em;
     font-weight: 800;
     text-transform: capitalize; }
+    
+@media (min-width: 880px) {
+    
+}
+
+@media (min-width: 1200px) {
+    
+}
+
