--- a/app/F2-branding.component.css
+++ b/app/F2-branding.component.css
@@ -1,15 +1,13 @@
 
 #resources {
-    margin: 1em 3em;
+    margin: 1em 0.5em;
     padding: 1em 0.5em;
-    background-color: rgba(233,236,229, .9);
     background-color: rgba(89,134,97, .9) }
 
 #resources > h1 {
-    margin: 0 2em;
+    margin: 0 0.25em;
     text-align: center;
     padding: 0 0 0.5em 0;
-    /*color:#5F6161;*/
     color:#e9ece5;
     /*border-top: 1px solid #3b3a36;*/
     font-size: 2em;
@@ -18,29 +16,40 @@
     
 #banner{
     width:100%;
-    padding: 1em 0;
     color: #e9ece5;
-    /*background-color: #6E8490;*/
     align-self: flex-end;
     display:-webkit-flex;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content:space-around; }
     
 #banner > p {
     margin: auto;
+    margin-top: 1em;
     padding-top: 0.5em;
-    /*background: rgba(95,97,97,0.5);*/
-    /*background: linear-gradient(to right, rgba(95,97,97,0.5), rgba(95,97,97, 0.25));*/
     color: #e9ece5;
     border-top: 1px solid #e9ece5;
-    font-size: 1.5em;
+    font-size: 1.75em;
     font-weight: 800;
-    text-transform: capitalize; }
+    text-transform: capitalize;
+    text-align: center; }
     
 @media (min-width: 880px) {
     
-}
+    #resources {
+    margin: 1em 3em;
+    padding: 1em 0.5em; }
+    
+    #resources > h1 {
+    margin: 0 2em; }
+    
+    #banner{
+    flex-direction: row;
+    justify-content:space-around;}
+    
+    #banner > p { 
+        text-align: left;
+    }
 
 @media (min-width: 1200px) {
     
