added stylesheet for contact form, doing mobile opts

--- a/app/F2-siteinfo.component.css
+++ b/app/F2-siteinfo.component.css
@@ -1,10 +1,11 @@
-
 .container {
-    margin: 2em;
-    padding: 1em 0.5em;
+    margin: 0.5em;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start; }
+
+#site-info{
+    position: relative; }
 
 .space-box {
     margin:1em auto;
@@ -36,8 +37,6 @@
     border-bottom: 1px solid #e9ece5;
     align-self: center; }
 
-#site-info{
-    position: relative; }
 
 .space-box > ul {
      display: flex;
@@ -51,12 +50,19 @@
     
 @media (min-width: 880px) {
     
+.container {
+    margin: 2em;
+    padding: 1em 0.5em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start; }
+    
 .space-box {
-    width: 42em; }
+    width: 25em; }
 }
 
 @media (min-width: 1200px) {
     .space-box {
-    width: 30em; }
+    width: 25em; }
 
 }
