--- a/app/contact-form.component.html
+++ b/app/contact-form.component.html
@@ -1,4 +1,4 @@
-<form id="contact-fields" *ngIf= "active" (ngSubmit)="onSubmit()" #sellerForm="ngForm">
+<form *ngIf= "active" (ngSubmit)="onSubmit()" #sellerForm="ngForm">
 
     <div class="form-group">
         <label for="First Name">First Name:</label>
