--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,7 @@ img {
 section { height:auto; }
   
 body {
-    font-family:  'Times New Roman', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Calibri', 'Times New Roman', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: transparent; }
 
 main {
