--- a/app/F2-siteinfo.component.css
+++ b/app/F2-siteinfo.component.css
@@ -10,7 +10,7 @@
 .space-box {
     margin:1em auto;
     width: 50em;
-    height: 30em;
+    height: auto;
     background: linear-gradient(to bottom, rgba(110,132,144, 1), rgba(110,132,144,0.75));
     background: -o-linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255,1));
     background: linear-gradient (to bottom, rgba(255,255,255, 0), rgba(255,255,255,1));
@@ -27,16 +27,8 @@
     border-bottom: solid 2px #e9ece5;
     font-size: 2em;
     font-weight: 600;
-    font-style:italic;
     text-align: center;
     align-self:center; }
-
-.space-box > footer {
-    margin-top: auto;
-    width: 90%; 
-    border-bottom: 1px solid #e9ece5;
-    align-self: center; }
-
 
 .space-box > ul {
      display: flex;
@@ -58,7 +50,14 @@
     justify-content: flex-start; }
     
 .space-box {
+    height: 30em;
     width: 25em; }
+
+.space-box > footer {
+    margin-top: auto;
+    width: 90%; 
+    border-bottom: 1px solid #e9ece5;
+    align-self: center; }
 }
 
 @media (min-width: 1200px) {
