--- a/css/main.css
+++ b/css/main.css
@@ -62,10 +62,12 @@ img {
 section { height:auto; }
   
 body {
+    height: 100%;
     font-family: 'Calibri', 'Times New Roman', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: transparent; }
 
 main {
+    height: 100%;
     margin: 7em 0 5em 0;
     background-color: transparent; }
 
