working on router config, fixed databinding for buttons

--- a/app/F2-navigator.component.html
+++ b/app/F2-navigator.component.html
@@ -6,8 +6,8 @@
             <h2>Austin, TX</h2>
             </div>
          <ul>
-            <a href="/contact">
-                <li>Contact</li>
+            <a [routerLink]= "['/contact']" routerLinkActive="active">
+                <li>{{linkName}}</li>
             </a>
         </ul>
         </div>
