--- a/app/contact-page.component.html
+++ b/app/contact-page.component.html
@@ -1,2 +1,2 @@
-<F2-navigator></F2-navigator>
+<F2-navigator [linkName]="link" [linkProperty]="linkPath" ></F2-navigator>
 <Footer-Credits></Footer-Credits>
