--- a/app/contact-page.component.html
+++ b/app/contact-page.component.html
@@ -1,3 +1,3 @@
 <F2-navigator [linkName]="link"></F2-navigator>
-<F2-contactcontainer></F2-contactcontainer>
+<form-container></form-container>
 <Footer-Credits></Footer-Credits>
