re-added contact container

--- a/app/contact-page.component.html
+++ b/app/contact-page.component.html
@@ -1,3 +1,4 @@
 <F2-navigator [linkName]="link"></F2-navigator>
 <form-container></form-container>
+<F2-contactcontainer></F2-contactcontainer>
 <Footer-Credits></Footer-Credits>
