--- a/app/footer-credits.component.html
+++ b/app/footer-credits.component.html
@@ -2,5 +2,5 @@
     <a href="https://commons.wikimedia.org/w/index.php?curid=203591">Photograph credit to Larry D. Moore, CC BY-SA 3.0 </a>
 </div> 
 <footer class="site-footer">
-    <h2>&copy Fixin' To Buy, LLC. | Website designed & built by John Marlett</h2>
+    <h2> {{ credit }} </h2>
 </footer>
