--- a/app/contact-page.component.html
+++ b/app/contact-page.component.html
@@ -1,9 +1,3 @@
 <F2-navigator [linkName]="link"></F2-navigator>
-<section id="site-info" class="container">
-            <div class="space-box">
-                <h2>Enter Your Info For A Quote</h2>
-                 <contact-form></contact-form>
-                <footer></footer>
-            </div>
-</section>
+<F2-contactcontainer></F2-contactcontainer>
 <Footer-Credits></Footer-Credits>
